--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -830,4 +830,6 @@ ul,li{
 @import "src/scss/App";
 @import "src/scss/About";
 @import "src/scss/Create";
+@import "src/scss/vote";
+@import "src/scss/react-datetime";
 
