--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -79,6 +79,7 @@
   background-image: url(../images/shape-9.png);
   background-repeat: no-repeat;
   background-position: center 2%;
+  box-sizing: border-box;
 }
 .trtestimonial-nav {
   position: relative;
