--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,7 +1,21 @@
 .header {
   padding: 30px 0 0;
-  text-align: right;
+
   width: 100%;
+  .rightText{
+    text-align: right;
+  }
+  .leftText{
+    vertical-align: bottom;
+    padding:30px;
+    cursor: pointer;
+    &:hover{
+      color: #d51073;
+    }
+    i{
+      padding-right: 10px;
+    }
+  }
   .btn {
     padding: 13px 30px;
     color: #fff;
