--- a/src/scss/Create.scss
+++ b/src/scss/Create.scss
@@ -24,13 +24,15 @@
 .breadcrumbstep {
   //text-align: center;
   margin-bottom: 40px;
+  width: 100%;
   li {
+    box-sizing: border-box;
     display: inline-block;
     position: relative;
     vertical-align: top;
     height: 40px;
     line-height: 40px;
-    padding: 0 40px;
+    padding: 0 49px;
     background-color: #f5f5f5;
     color: black;
 
@@ -40,7 +42,6 @@
       width: 0;
       height: 0;
     }
-
     & + li {
       margin-left: 3px;
 
@@ -74,13 +75,199 @@
       }
     }
 
-    &:hover,&.active {
+   &.active {
       background-color: #d51073;
       color: #ffffff;
 
       &:after {
         border-left-color: #d51073;
       }
+    }
+  }
+}
+.templateBrdr{
+  border: 1px solid #ced4da;
+  min-height: 200px;
+  box-sizing: border-box;
+  padding: 20px;
+  &>div{
+    border: 1px solid #433a8b;
+    color: #433a8b;
+    border-radius: 100% ;
+    display: inline-block;
+    margin: 0 20px 20px 0;
+    min-width: 100px;
+    min-height: 100px;
+    text-align: center;
+    line-height: 100px;
+    vertical-align: middle;
+    //background: #433a8b;
+  }
+}
+
+.title{
+  padding-top: 20px ;
+}
+
+.addresslist{
+  span{
+    padding-right: 20px;
+  }
+}
+.shape-image-five img {
+  position: absolute;
+  top: -45%;
+  z-index: -1;
+  left: 0;
+}
+.shape-image-four img {
+  position: absolute;
+  bottom: -100px;
+  z-index: -1;
+  right: 0;
+  -webkit-animation: scale 3s linear infinite;
+  -moz-animation: scale 3s linear infinite;
+  -ms-animation: scale 3s linear infinite;
+  -o-animation: scale 3s linear infinite;
+  animation: scale 3s linear infinite;
+}
+.shape-image-two img {
+  position: absolute;
+  top: 35%;
+  right: 7%;
+  z-index: -1;
+}
+@media(max-width: 1500px) {
+  .shape-image-five img {
+    top: -45%;
+    left: -10%;
+    -webkit-transform: scale(0.7);
+    -moz-transform: scale(0.7);
+    -ms-transform: scale(0.7);
+    -o-transform: scale(0.7);
+    transform: scale(0.7);
+  }
+  .shape-image-four img {
+    //right: -4%;
+    right: 0;
+  }
+  .shape-image-two img {
+    right: 0;
+  }
+}
+@media(max-width: 1199px) {
+  .shape-image-five img {
+    left: -20%;
+    -webkit-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -ms-transform: scale(0.5);
+    -o-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  .shape-image-four img {
+    display: none!important;
+  }
+  .shape-image-two img {
+    right: -20%;
+  }
+}
+@media(max-width: 991px) {
+  .shape-image-four img {
+    //display: none!important;
+    opacity: 0.4
+  }
+  .shape-image-two img {
+    right: -28%;
+    top: 36%;
+  }
+}
+@media(max-width: 767px) {
+  .shape-image-five img {
+    display: none!important;
+
+  }
+
+  .shape-image-two img {
+    -webkit-transform: scale(0.7);
+    -moz-transform: scale(0.7);
+    -ms-transform: scale(0.7);
+    -o-transform: scale(0.7);
+    transform: scale(0.7);
+    top: -3%;
+  }
+}
+
+.remove{
+  font-size: 1rem;
+  line-height: 2.5;
+  cursor:pointer;
+  color: #d51073;
+
+}
+.successInfo{
+  padding-bottom: 30px;
+  font-size: 20px;
+  color: #433a8b;
+  font-weight: 500;
+}
+
+.successFont{
+  padding: 25px 0 ;
+  h1 {
+    margin: auto;
+    font-size: 40px;
+    text-transform: uppercase;
+    /*color: #900048;*/
+    color: #d51073;
+    white-space: nowrap;
+  }
+
+  span:nth-child(1) {
+    animation: blink 1s steps(1, start) 0.33s infinite;
+  }
+
+  span:nth-child(2) {
+    animation: blink 1s steps(1, start) 0.66s infinite;
+  }
+
+  span:nth-child(3) {
+    animation: blink 1s steps(1, start) 0.33s infinite;
+  }
+
+  span:nth-child(4) {
+    animation: blink 1s steps(1, start) 0.66s infinite;
+  }
+
+  span:nth-child(5) {
+    animation: blink 1s steps(1, start) 0.33s infinite;
+  }
+
+  span:nth-child(6) {
+    animation: blink 1s steps(1, start) 0.66s infinite;
+  }
+  span:nth-child(7) {
+    animation: blink 1s steps(1, start) 0.33s infinite;
+  }
+
+  span:nth-child(8) {
+    animation: blink 1s steps(1, start) 0.66s infinite;
+  }
+  span:nth-child(9) {
+    animation: blink 1s steps(1, start) 0.33s infinite;
+  }
+
+  span:nth-child(10) {
+    animation: blink 1s steps(1, start) 0.66s infinite;
+  }
+
+  @keyframes blink {
+    33% {
+      /*color: #FF4057;*/
+      color: #d51073;
+    }
+    66% {
+      /*color: #FF8260;*/
+      color: #433a8b;
     }
   }
 }
