add vault & organization

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -832,4 +832,6 @@ ul,li{
 @import "src/scss/Create";
 @import "src/scss/vote";
 @import "src/scss/react-datetime";
+@import "src/scss/vault";
+@import "src/scss/org";
 
