--- a/src/scss/About.scss
+++ b/src/scss/About.scss
@@ -45,6 +45,9 @@
   .list{
     position: relative;
     padding-left: 18px ;
+    word-break:break-all;
+
+    word-wrap:break-word;
     li::before {
       position: absolute;
       margin-top: 10px;
@@ -55,6 +58,7 @@
       width: 7px;
       background: #d51073;
       border-radius: 7px;
+
 
       //transform: rotate(45deg);
     }
