--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,7 +1,7 @@
 .header {
-  padding: 30px 0 0;
-
+  padding-top: 30px;
   width: 100%;
+  box-sizing: border-box;
   .rightText{
     text-align: right;
   }
@@ -9,9 +9,13 @@
     vertical-align: bottom;
     padding:30px;
     cursor: pointer;
-    &:hover{
-      color: #d51073;
+    span{
+      padding-right: 20px;
+      &:hover{
+        color: #d51073;
+      }
     }
+
     i{
       padding-right: 10px;
     }
@@ -21,7 +25,6 @@
     color: #fff;
     background-color: #d51073;
     border-radius: 50px;
-    min-width: 200px;
     font-weight: 500;
     margin-right: 15px;
     &:hover {
@@ -83,5 +86,6 @@ footer {
   a{
     margin-right: 20px;
     color: #999999;
+    display: inline-block;
   }
 }
