--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -20,6 +20,21 @@
       padding-right: 10px;
     }
   }
+  .header-button{
+    select{
+      width: 50%;
+      text-align: right;
+      display: inline-block;
+    }
+    .topName{
+      font-size: 16px;
+      span{
+        color: #d51073;
+        text-transform : uppercase;
+        font-weight: bold;
+      }
+    }
+  }
   .btn {
     padding: 13px 30px;
     color: #fff;
