--- a/src/scss/Create.scss
+++ b/src/scss/Create.scss
@@ -21,6 +21,53 @@
     }
   }
 }
+
+.uploadBrdr{
+  width: 260px;
+  height: 260px;
+  overflow: hidden;
+  text-align: center;
+  //font-size: 48px;
+  background: #f5f5f5;
+  cursor: pointer;
+  line-height: 260px;
+  color: #999;
+
+  .removeBrdr{
+    background-color: #d51073;
+    color: #ffffff;
+    position: absolute;
+    right:5px;
+    top:-10px;
+    width: 20px;
+    font-size: 16px;
+    height: 20px;
+    z-index: 99;
+    text-align: center;
+    line-height: 20px;
+    border-radius: 100%;
+    cursor: pointer;
+
+  }
+  input{
+
+    width: 100%;
+    height: 40px;
+    vertical-align: top;
+    //height: 100%;
+    //position: absolute;
+    //top: 0;
+    //left: 0;
+    //outline: none;
+    //background-color: transparent;
+    //filter:alpha(opacity=0);
+    //-moz-opacity:0;
+    //-khtml-opacity: 0;
+    //opacity: 0;
+    //cursor: pointer;
+    //font-size: 0;
+  }
+}
 .breadcrumbstep {
   //text-align: center;
   margin-bottom: 40px;
@@ -167,19 +214,14 @@
   .shape-image-four img {
     display: none!important;
   }
-  .shape-image-two img {
-    right: -20%;
-  }
+
 }
 @media(max-width: 991px) {
   .shape-image-four img {
     //display: none!important;
     opacity: 0.4
   }
-  .shape-image-two img {
-    right: -28%;
-    top: 36%;
-  }
+
 }
 @media(max-width: 767px) {
   .shape-image-five img {
@@ -187,14 +229,7 @@
 
   }
 
-  .shape-image-two img {
-    -webkit-transform: scale(0.7);
-    -moz-transform: scale(0.7);
-    -ms-transform: scale(0.7);
-    -o-transform: scale(0.7);
-    transform: scale(0.7);
-    top: -3%;
-  }
+
 }
 
 .remove{
