--- a/src/scss/org.scss
+++ b/src/scss/org.scss
@@ -55,6 +55,7 @@
     padding: 10px 0;
     span{
       margin-right: 10px;
+      cursor: pointer;
     }
   }
 
@@ -68,4 +69,7 @@
       margin-right: 20px;
     }
   }
+}
+.hand{
+  cursor: pointer;
 }
