--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -1,3 +1,14 @@
+.sliderBrdr{
+  height:330px;
+  overflow: hidden;
+}
+
+@media(min-width: 769px) {
+  .overflow{
+    overflow: hidden;
+  }
+}
+
 .slick-prev, .slick-next{
   height: 40px;
   width: 40px;
@@ -7,6 +18,7 @@
   line-height: 40px;
   color: #ffffff;
   z-index: 9;
+  //margin-top: -52px;
 
 }
 .slick-prev:hover, .slick-next:hover,
@@ -16,16 +28,16 @@
 }
 .slick-prev:before, .slick-next:before{
   font-family: "FontAwesome";
-  font-size: 16px;
+  font-size: 26px;
   color: #fff;
   line-height: 40px;
   text-align: center;
 }
 .slick-prev:before {
-  content: "";
+  content: "";
 }
 .slick-next:before{
-  content: "";
+  content: "";
   padding-left:5px;
 }
 .slick-prev:hover:before,
@@ -34,7 +46,11 @@
 .slick-next:focus:before{
   color: #ffffff;
 }
-
+.slick-disabled,.slick-disabled:hover{
+  pointer-events: none;
+  cursor: default!important;
+  opacity: 0.8;
+}
 .trmain-slider{
   padding: 400px 0 200px 0;
   position: relative;
@@ -78,7 +94,7 @@
   padding: 60px 0 30px;
   background-image: url(../images/shape-9.png);
   background-repeat: no-repeat;
-  background-position: center 2%;
+  background-position: center 3.5px;
   box-sizing: border-box;
 }
 .trtestimonial-nav {
@@ -88,6 +104,7 @@
   background-image: url(../images/testimonial2.png);
   background-repeat: no-repeat;
   background-size: contain;
+  height: 260px;
 }
 .trtestimonial-nav:after {
   position: absolute;
@@ -105,10 +122,13 @@
   background-color: #e4e3eb;
 }
 .testimonial-slider-img {
-  height: 200px;
+  height:200px;
   display: flex!important;
   align-items: center;
+  margin-bottom: 100px;
+  cursor: pointer;
 }
+
 .testimonial-slider-img:focus,
 .trtestimonial-nav .slick-slide:focus {
   border: none;
@@ -121,9 +141,9 @@
   width: 50px;
   margin: 0 auto;
   cursor: pointer;
-  -webkit-box-shadow: 3px 4px 32px 0px rgba(67, 57, 139, 0.15);
-  -moz-box-shadow: 3px 4px 32px 0px rgba(67, 57, 139, 0.150);
-  box-shadow: 3px 4px 32px 0px rgba(67, 57, 139, 0.15);
+  -webkit-box-shadow: 3px 4px 10px 0px rgba(67, 57, 139, 0.1);
+  -moz-box-shadow: 3px 4px 10px 0px rgba(67, 57, 139, 0.1);
+  box-shadow: 3px 4px 10px 0px rgba(67, 57, 139, 0.1);
 }
 .slick-slide.intro-prev .testimonial-slider-img img,
 .slick-slide.intro-next .testimonial-slider-img img{
