--- a/src/scss/Create.scss
+++ b/src/scss/Create.scss
@@ -25,19 +25,19 @@
 .uploadBrdr{
   width: 260px;
   height: 260px;
-  overflow: hidden;
   text-align: center;
   //font-size: 48px;
   background: #f5f5f5;
   cursor: pointer;
   line-height: 260px;
   color: #999;
+ position: relative;
 
   .removeBrdr{
     background-color: #d51073;
     color: #ffffff;
     position: absolute;
-    right:5px;
+    right:-10px;
     top:-10px;
     width: 20px;
     font-size: 16px;
