--- a/src/scss/About.scss
+++ b/src/scss/About.scss
@@ -15,6 +15,7 @@
   padding: 30px;
   li{
     padding-bottom: 20px;
+    word-break:break-all;
   }
 
 }
@@ -73,7 +74,6 @@
   display: inline-block;
   text-align: center;
   margin-bottom: 30px;
-
   img{
     //width: 200px;
     //height: 200px;
