--- a/src/scss/org.scss
+++ b/src/scss/org.scss
@@ -46,6 +46,9 @@
   background: #fafafa;
   padding: 20px;
   margin-bottom: 20px;
+  textarea{
+    margin-top: 20px;
+  }
   button{
     margin-top: 20px;
   }
@@ -72,4 +75,7 @@
 }
 .hand{
   cursor: pointer;
+}
+.nowrap{
+  white-space: nowrap;
 }
