--- a/src/scss/vault.scss
+++ b/src/scss/vault.scss
@@ -8,6 +8,7 @@
   h6{
     padding-left: 20px;
   }
+
   .vaultbg{
     background: #f5f5f5;
     padding:20px 20px 5px;
@@ -24,8 +25,15 @@
     dd{
       display: inline-block;
       a{
-        padding-left: 20px;
+        padding-left:20px;
+
       }
+    }
+
+  }
+  .hslist{
+    a{
+      padding: 0 10px!important;
     }
   }
   .qrcode{
