add auth in org

--- a/src/scss/About.scss
+++ b/src/scss/About.scss
@@ -134,6 +134,7 @@
     color: #ffffff;
     padding-left: 60px;
     cursor: pointer;
+    white-space: nowrap;
     &:last-child{
       width: 115px;
     }
