--- a/src/scss/org.scss
+++ b/src/scss/org.scss
@@ -437,6 +437,33 @@
   display: flex;
   justify-content: center;
 }
+.btnRht10{
+  margin-right: 28px;
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+}
+.triggerTips{
+  position: absolute;
+  white-space: nowrap;
+  left: -200px;
+  //background:rgba(20, 11, 54, 0.5);
+  background:#271b65;
+  padding: 6px 13px;
+  border-radius: 60px;
+
+}
+.trigger3{
+  width: 0;
+  height: 0;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  border-left: 16px solid #271b65;
+  //border-left: 16px solid #f00;
+  position: absolute;
+  top:11px;
+  right: -8px;
+}
 .topRhtBtn{
   background: transparent;
   cursor: pointer;
@@ -715,4 +742,7 @@
     background-size: 100%!important;
   }
 
+}
+.top20{
+  margin-top: 20px!important;
 }
