add exit account & add trigger action

--- a/src/scss/org.scss
+++ b/src/scss/org.scss
@@ -291,6 +291,7 @@
       margin-bottom: 0;
     }
     input[type='checkbox' i] {
+      flex-shrink: 0;
       appearance:none;
        -moz-appearance: none;
       background:transparent;
