--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -79,6 +79,7 @@ position: relative;
   .header-button{
     text-align: right;
     padding-right: 70px;
+    position: relative;
     //display: flex;
     //justify-content: space-between;
     //select{
@@ -94,6 +95,27 @@ position: relative;
     //    font-weight: bold;
     //  }
     //}
+    .addressBrdr{
+      position: absolute;
+      bottom: -45px;
+      right: 70px;
+      width: 800px;
+      vertical-align: middle;
+      span{
+        //border-bottom: 1px dashed #fff;
+        margin-left: 20px;
+        padding: 0;
+        color: #ffffff;
+        cursor: pointer;
+        display: inline-block;
+      }
+      img{
+        width: 20px;
+        display: inline-block;
+        margin-top: -3px;
+        margin-left: -5px;
+      }
+    }
   }
 
   .rhtBtn {
