--- a/src/scss/vote.scss
+++ b/src/scss/vote.scss
@@ -146,7 +146,7 @@
         border-bottom-left-radius: 15px;
       }
       &:last-child{
-        width: 51px;
+        min-width: 51px;
         text-align: right;
         border-top-right-radius: 15px;
         border-bottom-right-radius: 15px;
@@ -211,7 +211,7 @@
 .voteTop{
   display: flex;
   justify-content: space-between;
-  margin: 10px 70px 50px 0;
+  margin: 40px 70px 50px 0;
   min-height: 60px;
   .voteLft{
     margin-top: 40px;
@@ -440,6 +440,9 @@
         color: #ffffff;
 
       }
+    }
+    .address{
+      font-size: 18px;
     }
   }
   h6{
