--- a/src/scss/org.scss
+++ b/src/scss/org.scss
@@ -289,6 +289,8 @@
     }
     label{
       margin-bottom: 0;
+      word-break: break-all;
+      padding-right: 10px;
     }
     input[type='checkbox' i] {
       flex-shrink: 0;
