--- a/src/scss/About.scss
+++ b/src/scss/About.scss
@@ -30,22 +30,23 @@
   }
   .listwrap{
     margin-bottom: 57px;
-    //width: 100%;
-    max-width:480px;
-    overflow-x: auto;
+    width: 100%;
+    //max-width:480px;
+    //overflow-x: auto;
     box-sizing: border-box;
   }
   .listbg{
     display: flex;
   }
   .listbalance{
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: nowrap;
+    //display: flex;
+    //justify-content: flex-start;
+    //flex-wrap: nowrap;
     dl{
       padding: 20px 20px 30px;
-      width: 150px;
-      height: 171px;
+      //width:420px;
+      width: 100%;
+      //height: 171px;
       box-sizing: border-box;
 
       background: rgba(20, 11, 54, 0.5);
@@ -63,12 +64,14 @@
         word-break:break-all!important;
         font-size: 12px;
         line-height: 16px;
+        width: 100%;
       }
       dd{
         display: inline-block;
         font-size: 22px;
         line-height: 29px;
         color: #ffffff;
+        width: 100%;
         a{
           padding-left:20px;
 
