--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -78,7 +78,7 @@ position: relative;
   }
   .header-button{
     text-align: right;
-    padding-right: 70px;
+    padding-right: 50px;
     position: relative;
     //display: flex;
     //justify-content: space-between;
@@ -96,12 +96,14 @@ position: relative;
     //  }
     //}
     .addressBrdr{
-      position: absolute;
-      bottom: -45px;
-      right: 70px;
-      width: 800px;
+      //position: absolute;
+      //bottom: -45px;
+      //right: 70px;
+      //width: 800px;
+      display: inline-block;
       vertical-align: middle;
       cursor: pointer;
+      margin-right: 30px;
       span{
         //border-bottom: 1px dashed #fff;
         margin-left: 20px;
@@ -359,4 +361,7 @@ position: relative;
     margin-right: 10px;
     display: inline-block;
   }
+}
+.balanceRht{
+  padding-right: 20px;
 }
