fix vote & create new dao

--- a/src/scss/Create.scss
+++ b/src/scss/Create.scss
@@ -160,6 +160,13 @@
         left:-87.5px ;
       }
     }
+    &.step4{
+      div{
+        background: url("../images/Union3.png") no-repeat;
+        width: 209px;
+        left:-87.5px ;
+      }
+    }
   }
   //li {
   //  box-sizing: border-box;
