add symbol & cancel tips

--- a/src/scss/About.scss
+++ b/src/scss/About.scss
@@ -42,6 +42,9 @@
     //display: flex;
     //justify-content: flex-start;
     //flex-wrap: nowrap;
+    .symbol{
+      text-transform: uppercase;
+    }
     dl{
       padding: 20px 20px 30px;
       //width:420px;
