--- a/src/scss/Create.scss
+++ b/src/scss/Create.scss
@@ -1,5 +1,5 @@
 .createSingle{
-  padding: 30px 0 30px 30px;
+  padding: 10px 0 30px 30px;
   li{
     margin-bottom: 20px;
     //.btn{
@@ -11,7 +11,7 @@
     margin-right: 30px;
   }
   textarea{
-    min-height: 200px;
+    min-height: 15vh;
   }
   .col-lg-4{
     img{
@@ -24,11 +24,8 @@
 
 .inputBrdr{
   width: 180px;
-  margin-top: 26px;
+  margin-top: 20px;
 
- .form-control{
-   padding: 16px 28px!important;
- }
 }
   .form-label{
     line-height: 150px;
@@ -67,7 +64,7 @@
 
   }
   .uploadTit{
-    margin: 20px 0 25px;
+    margin: 10px 0 25px;
     padding-left: 15px;
   }
   input{
@@ -409,7 +406,7 @@
 
 .form-label{
   width: 100%;
-  padding:20px 0 12px;
+  padding:10px 0;
 }
 .inputBrdr{
   background: #3A28864D;
@@ -417,11 +414,18 @@
   width: 100%;
   padding: 1px!important;
   height: auto;
+  position: relative;
+  .removeInput{
+    position: absolute;
+    right: 17px;
+    top:13px;
+    cursor: pointer;
+  }
   .form-control{
     color: #ffffff;
     border: 0;
     background: transparent;
-    padding: 28px!important;
+    padding: 1.5vh!important;
     height: auto!important;
   }
 
@@ -446,7 +450,7 @@
     background: #160947CC;
     //border: 0;
     color: #A8B0C1;
-    height: 75px;
+    height: 7vh;
     border-radius: 15px;
     margin: 1px;
     border: 1px solid #281A62
@@ -476,7 +480,7 @@
   dl{
     margin-top: 1px;
     width: 175px;
-    height: 250px;
+    height: 230px;
     display: inline-block;
     border-radius: 15px;
     box-sizing: border-box;
@@ -495,11 +499,12 @@
 
     }
     dt{
-      padding: 25px;
+      //padding: 25px;
+      padding: 2vh ;
       font-size: 20px;
     }
     dd{
-      padding: 0 25px;
+      padding: 0 2vh;
       color: #A8B0C1;
       font-size: 16px;
       line-height: 19px;
@@ -512,10 +517,12 @@
 }
 .topTitle{
   text-align: center;
-  margin: 100px 0 72px;
+  //margin: 100px 0 72px;
+  margin: 1vh 0 3vh;
 }
 .step2brdr{
-  margin-top: 160px;
+  //margin-top: 160px;
+  margin-top: 2vh;
   display: flex;
   justify-content: center;
   .btn-primary{
@@ -525,7 +532,7 @@
     color: #ffffff;
     outline: none;
     width: 470px;
-    height: 75px;
+    height: 55px;
     border-radius: 15px!important;
     &:active{
       background: linear-gradient(90deg, rgba(75, 105, 242, 0.6) 0%, rgba(238, 66, 209, 0.6) 100%), linear-gradient(0deg, #000000, #000000);
