--- a/src/scss/About.scss
+++ b/src/scss/About.scss
@@ -232,3 +232,15 @@
     }
   }
 }
+.iconlft{
+  padding-left: 10px;
+  display: inline-block;
+  background: transparent;
+  border: 0;
+  svg{
+    fill:white;
+    width: 14px;
+    height: 14px;
+    cursor: pointer;
+  }
+}
