--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -47,6 +47,9 @@ position: relative;
     padding: 0;
     margin: 0;
   }
+  .toFirst{
+    cursor: pointer;
+  }
   .lftTit{
     padding: 45px 70px;
     a{
