--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -5,12 +5,12 @@ $primary:       #d51073 !default;
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');
 
 
-body,html{
-  color: #A8B0C1;
-  background: url("../images/bg.png")  no-repeat fixed;
-  background-size: cover;
-  height: 100%;
-}
+// body,html{
+//   color: #A8B0C1;
+//   background: url("../images/bg.png")  no-repeat fixed;
+//   background-size: cover;
+//   height: 100%;
+// }
 
 ul,li{
   list-style: none;
@@ -19,9 +19,8 @@ ul,li{
 }
 
 *{
-  font-family: 'Roboto', sans-serif!important;
+  font-family: Roboto-Light, Roboto!important;
   outline: none!important;
-  box-shadow: none!important;
   &:focus{
     outline: none!important;
     box-shadow: none!important;
@@ -34,36 +33,42 @@ textarea{
 .btn{
   cursor: pointer;
   margin-right: 20px;
-  border: 1px solid #EE42D1;
-  font-size: 14px;
-  color: #ffffff;
-  padding: 9px 27px;
-  border-radius: 57px;
+  // border: 1px solid #EE42D1;
+  padding: 13px 28px;
+  font-size: 24px;
+  font-family: PingFangSC-Regular, PingFang SC;
+  background: #D52473;
+  color: #FFFFFF;
   outline: none;
+  display: flex;
+  align-items: center;
   //&:link{color:#fff}
   &:hover,&:focus{
-    background: linear-gradient(90deg, #4B69F2 0%, #EE42D1 100%);
+    // background: linear-gradient(90deg, #4B69F2 0%, #EE42D1 100%);
     border:0;
     margin: 1px;
     margin-right: 21px;
-    color: #ffffff;
+    color: #FFFFFF;
     outline: none;
     //background-image: linear-gradient(#4B69F2,#EE42D1),linear-gradient(90deg, #4B69F2 0%, #EE42D1 100%);
   }
   &:active{
-    background: linear-gradient(90deg, rgba(75, 105, 242, 0.6) 0%, rgba(238, 66, 209, 0.6) 100%), linear-gradient(0deg, #000000, #000000);
+    // background: linear-gradient(90deg, rgba(75, 105, 242, 0.6) 0%, rgba(238, 66, 209, 0.6) 100%), linear-gradient(0deg, #000000, #000000);
     border:0;
     margin: 1px;
     margin-right: 21px;
-    color: #ffffff;
+    color: #FFFFFF;
     outline: none;
+  }
+  img{
+    width: 24px;
+    height: 16px;
+    margin-left: 15px;
   }
 }
 
 .btnR{
   cursor: pointer;
-
-
   font-size: 14px;
   padding: 9px 27px;
   border-radius: 57px;
