--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -2,3 +2,11 @@
   font-family: "Roboto-Light";
   src: url('./fonts/Roboto-Light.ttf');
 }
+@font-face {
+  font-family: "Roboto-Regular";
+  src: url('./fonts/Roboto-Regular.ttf');
+}
+@font-face {
+  font-family: "PingFang-Regular";
+  src: url('./fonts/PingFang-Regular.ttf');
+}
