add table style

--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -10,3 +10,7 @@
   font-family: "PingFang-Regular";
   src: url('./fonts/PingFang-Regular.ttf');
 }
+@font-face {
+  font-family: "PingFang-Medium";
+  src: url('./fonts/PingFang-Medium.ttf');
+}
